Implement CMA-PPO algorithm and organize documentation
## CMA-PPO Implementation
- Implemented CMA-PPO (Covariance Matrix Adaptation PPO) following Hämäläinen et al. (2018)
- Added separate mean and variance networks with independent optimizers
- Implemented action mirroring with Gaussian kernel weighting
- Added history buffer for rank-µ variance updates
- Integrated with existing modular framework (Algorithm interface, ExperimentRunner, MetricsTracker)
- Added CMA-PPO specific command-line arguments (--lam, --cma_lr_mean, --cma_lr_var, etc.)
- Verified working with test experiments

## Documentation Reorganization
- Created three organized documentation files:
  - CODEBASE_OVERVIEW.md: Complete codebase structure and architecture
  - CMA_PPO.md: Detailed CMA-PPO implementation documentation
  - RUNNING_EXPERIMENTS.md: How to run experiments, SLURM setup, baselines
- Updated README.md to be a simple entry point with links to main docs

## Cleanup
- Added comprehensive .gitignore to exclude checkpoints, __pycache__, .pyc files
- Deleted test files: test_job.sh, test_defaults.sh, test_cma_ppo.sh
- Deleted old documentation files that were merged into new structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,43 @@
-PR_DESCRIPTION.md
-SLURM_SETUP.md
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Experiment results and checkpoints
+checkpoints/
+*.pkl
+*.png
+*.txt
+!requirements.txt
+!README.txt
+
+# SLURM output files
+slurm-*.out
+slurm-*.err
+*.out
+*.err
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Environment
+.env
+venv/
+env/
+ENV/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Test files (if any)
+test_*.sh
