Add independent trials experiment code with threshold testing
- Add submit_threshold_trials.sh: Script to submit 5 independent trials for ES-PPO and CMA-PPO
- Add check_progress.sh: Deterministic progress checking tool for running trials
- Add extract_max_policies_cma_ppo.py: Utility to extract and test policies at max reward points
- Add plot_trials.py: Plotting script for visualizing trial results
- Update experiments/runner.py: Add policy reinitialization for trial independence, threshold detection, and greedy evaluation
- Update main.py: Set reward goal to 250
- Add ALGORITHM_COMPARISON.md: Documentation of experiment setup
- Update .gitignore: Exclude experiment outputs, logs, and results

--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,22 @@ __pycache__/
 
 # Experiment results and checkpoints
 checkpoints/
+independent_trials_*/
 *.pkl
 *.png
 *.txt
 !requirements.txt
 !README.txt
+!ALGORITHM_COMPARISON.md
+!CONFIGURATION_AND_FAIRNESS.md
 
 # SLURM output files
 slurm-*.out
 slurm-*.err
 *.out
 *.err
+*.log
+extract_max_policies.log
 
 # IDE
 .vscode/
